# authentication-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_10_02_2132-4c91366eeafa_.py  2023_10_02_2141-eeaebb051259_.py  2023_10_07_1534-db4d0aee6ac5_.py  2023_10_09_1358-d50f2a6ff3c3_.py  cffb05fafa49_.py
src/: config.py  main.py
src/api/: dependencies.py  include_routers.py
src/api/routers/: auth.py
src/api/schemas/: auth.py
src/back/: config.py  session.py
src/database/: session.py
src/database/models/: base.py
src/models/: base.py  user.py
src/repositories/: auth.py  dependencies.py  user.py
src/repositories/base/: abstract.py  sqlalchemy.py
src/repositories/base_repositories/: abstract.py  sqlalchemy.py
src/routers/: auth.py  base.py  dependencies.py
src/schemas/: auth.py
src/services/: auth.py  dependencies.py  user.py
src/services/validators/: auth.py  base.py  dependencies.py
src/utils/: dependencies.py  hash_password.py  repository.py
