[tool.poetry]
name = "authentication-service"
version = "0.1.0"
description = ""
authors = ["Grisha Malanchuk <grishamalanchuk@gmail.com>"]
readme = "README.md"
packages = [{include = "authentication_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.2"}
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
